--- a/modules/fluxus-audio/SConscript
+++ b/modules/fluxus-audio/SConscript
@@ -7,7 +7,7 @@ import os, os.path
 
 Target       = "fluxus-audio.so"
 
-Import("Prefix", "FluxusVersion", "CollectsLocation", "BinaryModulesLocation")
+Import("InstallEnv", "FluxusVersion", "CollectsLocation", "BinaryModulesLocation")
 
 Install      = BinaryModulesLocation
 LibPaths     = Split("/usr/local/lib /usr/local/lib/plt /usr/lib")
@@ -25,6 +25,4 @@ env = Environment(CCFLAGS = '-ggdb -pipe -Wall -O3 -ffast-math -Wno-unused -fPIC
 		  SHLIBPREFIX = "")
 
 Default(env.SharedLibrary(source = Source, target = Target))
-	
-env.Install(Install, Target)
-env.Alias('install', Prefix)
+InstallEnv.Install(Install, Target)
