--- a/modules/SConscript
+++ b/modules/SConscript
@@ -3,24 +3,14 @@
 #
 # Sets up common stuff, and calls each module SConscript 
 
-import sys
-Import("InstallEnv","Prefix","FluxusVersion")
-
-# we cant (or I can find out how to) link against external .o files with 
-# vanilla scons, so I have to rename it to make it a static library
-#sys.command("cp "+Prefix+"/lib/plt/mzdyn.o modules/libmzdyn.a")
+Import("env", "CollectsLocation", "MZDYN")
 
 # Don't know what the name for this for osx is - probably doesn't matter, but 
 # we should use the convention PLT uses (I guess it's used for a networked 
 # multi architecture install)
 Arch = "/i386-linux"
-
-CollectsLocation = Prefix + "/lib/plt/collects/fluxus-"+FluxusVersion
 BinaryModulesLocation = CollectsLocation + "/compiled/native" + Arch
 
-SConscript(dirs = ["fluxus-engine",
-				   "fluxus-audio",
-				   "fluxus-osc",
-				   "scheme"], 
-           exports = ["InstallEnv", "FluxusVersion", "CollectsLocation", "BinaryModulesLocation"])
+SConscript(dirs = ["fluxus-engine", "fluxus-audio", "fluxus-osc", "scheme"], 
+           exports = ["env", "CollectsLocation", "BinaryModulesLocation", "MZDYN"])
 
